--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "email": "eliasandualem8gmail.com"
   },
   "scripts": {
+    "test": "jest",
     "start": "nodemon server.js"
   },
   "dependencies": {
@@ -33,6 +34,14 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "jest": "^25.2.3",
+    "mongodb-memory-server": "^6.5.0",
     "nodemon": "^2.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
