--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "@hapi/joi": "^16.1.7",
