--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "node server.js"
+    "start": "pm2-runtime start ecosystem.config.js --env production"
   },
   "dependencies": {
     "@hapi/joi": "^16.1.7",
@@ -30,6 +30,7 @@
     "mongoose-hidden": "^1.8.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
+    "pm2": "^4.2.3",
     "rxjs": "^6.5.3",
     "winston": "^3.2.1"
   },
