--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "eslint": "^6.2.1",
+    "eslint-config-standard": "^14.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.2.3",
     "mongodb-memory-server": "^6.5.0",
     "nodemon": "^2.0.0"
