--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
   "env": {
-    "node": true,
+    "jest":     true,
+    "node":     true,
     "commonjs": true,
-    "es6": true
+    "es6":      true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
