--- a/package.json
+++ b/package.json
@@ -4,35 +4,35 @@
   "private": true,
   "author": {
     "name": "Elias Andualem",
-    "email": "eliasandualem8gmail.com"
+    "email": "eliasandualem8@gmail.com"
   },
   "scripts": {
     "test": "jest --coverage",
     "start": "pm2-runtime start ecosystem.config.js --env development"
   },
   "dependencies": {
-    "@hapi/joi": "^16.1.7",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "latest",
-    "celebrate": "^10.1.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "@hapi/joi":            "^16.1.7",
+    "bcrypt-nodejs":        "0.0.3",
+    "body-parser":          "latest",
+    "celebrate":            "^10.1.0",
+    "compression":          "^1.7.4",
+    "cookie-parser":        "~1.4.4",
+    "cors":                 "^2.8.5",
+    "debug":                "~2.6.9",
+    "dotenv":               "^8.2.0",
+    "express":              "~4.16.1",
     "express-bearer-token": "^2.4.0",
-    "helmet": "^3.21.2",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "mongoose": "^5.7.12",
-    "mongoose-hidden": "^1.8.1",
-    "morgan": "^1.9.1",
-    "passport": "^0.4.0",
-    "pm2": "^4.2.3",
-    "rxjs": "^6.5.3",
-    "winston": "^3.2.1"
+    "helmet":               "^3.21.2",
+    "http-errors":          "~1.6.3",
+    "jsonwebtoken":         "^8.5.1",
+    "moment":               "^2.24.0",
+    "mongoose":             "^5.7.12",
+    "mongoose-hidden":      "^1.8.1",
+    "morgan":               "^1.9.1",
+    "passport":             "^0.4.0",
+    "pm2":                  "^4.4.0",
+    "rxjs":                 "^6.5.3",
+    "winston":              "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.2.1",
